# SwarmAI

./: .gitignore  AUTH_GUIDE.md  INTERVIEW_GUIDE.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  test_llm.py
agents/: calendar_agent.py  controller.py  email_agent.py  final_agent.py  finish_agent.py  researcher_agent.py  supervisor_agent.py
graph/: build_graph.py
interface/: app.py
mcp_servers/: calendar_server.py  gmail_server.py  search_server.py
state/: state.py
tools/: mcp_client.py  tool_registry.py
utils/: contacts.py  google_auth.py  llm.py
